--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
        <link rel="stylesheet" href="index.css">
     </head>
+	<div class="div-container">
+		
+	</div>
     <body>
 	<script src="index.js" type="module"></script>
     </body>
