--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-       <link rel="stylesheet" href="index.css">
+    <head>
+        <title>Bean & Gone</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+        <link rel="stylesheet" href="index.css">
     </head>
-	<div class="div-container">
-		
-	</div>
     <body>
+        <div class="div-container">
+            <header>
+                <h1>Bean & Gone</h1>
+                <p>Coffee, code, relax</p>
+            </header>
+            <main>
+                <section class="section-menu-filter" id="section-menu-filter">
+                    <div class="div-category">Coffee</div>
+                    <div class="div-category">Breakfast</div>
+                    <div class="div-category">Lunch</div>
+                    <div class="div-category">Treats</div>
+                    <div class="div-category">Other</div>
+                </section>
+                <section class="section-menu" id="section-menu">
+                    
+                </section>
+                <section class="section-order" id="section-order">
+                    <button class="btn btn-view-order" id="btn-view-order">View order</button>
+                </section>
+            </main>
+            <dialog class="modal" id="modal-view-order">
+                <p>I'm a modal with the order in it</p>
+                <button id="btn-close-view-order">Close me</button>
+            </dialog>
+        </div>
 	<script src="index.js" type="module"></script>
     </body>
 </html>
-
