--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <div class="div-container">
             <header>
                 <h1>Bean & Gone</h1>
-                <p>Coffee, code, relax</p>
+                <p>Coffee. Code. Hang.</p>
             </header>
             <main>
                 <section class="section-menu-filter" id="section-menu-filter">
-                    <div class="div-category">Coffee</div>
-                    <div class="div-category">Breakfast</div>
-                    <div class="div-category">Lunch</div>
-                    <div class="div-category">Treats</div>
-                    <div class="div-category">Other</div>
+                    <button class="btn-category">Coffee</button>
+                    <button class="btn-category">Breakfast</button>
+                    <button class="btn-category">Lunch</button>
+                    <button class="btn-category">Treats</button>
+                    <button class="btn-category">Other</button>
                 </section>
                 <section class="section-menu" id="section-menu">
                     
@@ -26,8 +26,9 @@
                 </section>
             </main>
             <dialog class="modal" id="modal-view-order">
-                <p>I'm a modal with the order in it</p>
-                <button id="btn-close-view-order">Close me</button>
+                <div id="modal-view-order-inner">
+                </div>
+                <button id="btn-close-view-order">Close</button>
             </dialog>
         </div>
 	<script src="index.js" type="module"></script>
